<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/idtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorProducktName"
            android:textSize="14sp"
            android:textStyle="bold"

            android:layout_marginTop="35sp"
            android:background="@android:color/transparent"
            android:text="@string/action_sample"

            />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_price"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_gravity="center_vertical"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/color_price"
/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_ordernow"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/action_order"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        app:backgroundTint="@color/colorbtnOrderNow" />
    </LinearLayout>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginLeft="4dp"
            android:padding="@dimen/img_margin"
            android:layout_weight="2"
            android:src="@drawable/bottles_sample">
        </ImageView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:textSize="5sp"
        android:paddingBottom="1dp"
        android:background="@color/color_price"
        android:text="@string/tax_tag"/>
</android.support.v7.widget.CardView>
</RelativeLayout>





