<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#fff"
    android:scrollbarStyle="insideInset"
    tools:context=".RateUsFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image_ico"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/logo"
        android:id="@+id/tag"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:text="@string/rateus_fragment" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/tag"
        android:id="@+id/tag_detail"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:text="@string/rate_fragment" />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tag_detail"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:progressTint="@color/colorrate" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:id="@+id/input_feedback"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/feedback_fragment" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="feedback"
        android:textAlignment="center"
        android:layout_below="@+id/input_feedback"
        android:id="@+id/ed_feedback"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/ed_feedback"
        android:id="@+id/tag_feedback"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/guidlines" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/btnSubmit"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tag_feedback"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/colorgreen"/>
</RelativeLayout>
</ScrollView>