<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    tools:context="com.pac.ideatech.noordrinkingwater.OnlineOrderFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="200dp"
                android:id="@+id/img_thumbnail"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/image_ico"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="4"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:padding="2dp"
                android:id="@+id/title_pro"
                android:layout_weight="3"
                android:textColor="@color/colorPrimaryDark"
                android:shadowColor="@color/cardview_dark_background"
                android:text="@string/title_product"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="2dp"
                    android:text="@string/title_price"
                    android:textColor="@color/colorred"
                    android:textSize="18dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:id="@+id/ed_quantity"
                    android:hint="@string/hint_quantity"
                    android:textAlignment="center"
                    android:inputType="none"
                    android:editable="false"
                    android:windowSoftInputMode="stateAlwaysHidden"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_weight=".3"
                    android:textColor="@color/white"
                    android:id="@+id/btn_min"
                    android:text="-"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_weight=".3"
                    android:text="+"/>
            </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/tv_price_total"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/title_total_price"/>

                <android.support.v7.widget.AppCompatButton
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_add_cart"
                    android:drawableRight="@drawable/ic_add_shopping_cart_white_24dp"
                    android:id="@+id/btn_add_cart"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:backgroundTint="@color/colorPrimary"

                    />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
