<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none"
    android:background="#fff"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_ico"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@+id/logo"
            android:id="@+id/tag"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:text="@string/suggest_fragment" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guidlines"
            android:layout_below="@+id/tag"
            android:id="@+id/guidlines"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            />
        <android.support.v7.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/feedack_type"
        android:layout_below="@+id/guidlines"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"

        android:id="@+id/spinner_feedback"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/ed_msg"
            android:layout_below="@+id/spinner_feedback"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Type your complaint..."
            android:fontFamily="sans-serif-condensed"
            android:minLines="2"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_msg"
            android:text="Send"
            android:id="@+id/btn_send"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/colorPrimary"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_send"/>
    </RelativeLayout>
</ScrollView>